--- a/yuanPano/package.json
+++ b/yuanPano/package.json
@@ -20,6 +20,12 @@
   },
   "homepage": "https://github.com/rainyjune/panorama-viewer#readme",
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "babel-preset-es2015": "^6.3.13",
+    "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "load-grunt-tasks": "^3.4.0"
   }
 }
